--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <head>
         <meta charset="UTF-8">
         <title>The Website of Alex</title>
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
-        <h1>Testing my site now - is it really live? Yes</h1>
+        <h1 class="title">The WebDev Learning Project</h1>
         <h2 lang="ja">Japanese: こんにちは</h2>
         <p>Lorem ipsum <strong>dolor</strong> sit amet, consectetur adipiscing elit, sed do eiusmod tempor
         incididunt ut labore et dolore magna aliqua.</p>
@@ -35,6 +36,11 @@
                             <li>FPGA</li>
                         </ul>
                     <li>Heater (pause)</li>
+                </ul>
+                <li>Test</li>
+                <ul>
+                    <li>Test item 1</li>
+                    <li>Test item 2</li>
                 </ul>
         </ul>
         <h2>To do list</h2>
