added div for svg

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
             <li>Create PCB with a STM32 soldered on</li>
             <li>Recreate Artec-Microbit Adapter with STM32 controlling board instead</li>
         </ol>
-        <img src="./images/VLSI.svg" alt="Verilog and FPGA Learning">
+        <div class="svg-size">
+            <img src="./images/VLSI.svg" alt="Verilog and FPGA Learning">
+        </div>
+        
     </body>
 </html>
